[gd_scene load_steps=7 format=2]

[ext_resource path="res://scene/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://sound/Menu-Scroll-A-www.fesliyanstudios.com.mp3" type="AudioStream" id=2]
[ext_resource path="res://font/PT_Sans/PTSans-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://video/Y2mate.Com - The Less I Know The Better Dance Mix 480p.webm" type="VideoStream" id=4]
[ext_resource path="res://sound/y2mate.com - ナイトオブWINDOWS XPSakuya Theme Windows XP Edition.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MainMenuVideo" type="VideoPlayer" parent="."]
margin_right = 1021.0
margin_bottom = 601.0
stream = ExtResource( 4 )
autoplay = true
expand = false

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="MainMenuVideo"]
stream = ExtResource( 5 )
volume_db = -12.0
autoplay = true

[node name="VideoPosTimer" type="Timer" parent="MainMenuVideo"]
wait_time = 0.33
autostart = true

[node name="MenuContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.5
margin_top = -103.0
margin_right = 77.5
margin_bottom = 103.0

[node name="StartText" type="RichTextLabel" parent="MenuContainer"]
margin_right = 155.0
margin_bottom = 66.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Start"
text = "Start"
fit_content_height = true

[node name="OptionText" type="RichTextLabel" parent="MenuContainer"]
margin_top = 70.0
margin_right = 155.0
margin_bottom = 136.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Option"
text = "Option"
fit_content_height = true
__meta__ = {
"_editor_description_": ""
}

[node name="QuitText" type="RichTextLabel" parent="MenuContainer"]
margin_top = 140.0
margin_right = 155.0
margin_bottom = 206.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Quit"
text = "Quit"
fit_content_height = true
__meta__ = {
"_editor_description_": ""
}

[node name="MouseHoverSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="timeout" from="MainMenuVideo/VideoPosTimer" to="." method="_on_VideoPosTimer_timeout"]
[connection signal="gui_input" from="MenuContainer/StartText" to="." method="_on_StartText_gui_input"]
[connection signal="mouse_entered" from="MenuContainer/StartText" to="." method="_on_StartText_mouse_entered"]
[connection signal="mouse_exited" from="MenuContainer/StartText" to="." method="_on_StartText_mouse_exited"]
[connection signal="gui_input" from="MenuContainer/OptionText" to="." method="_on_OptionText_gui_input"]
[connection signal="mouse_entered" from="MenuContainer/OptionText" to="." method="_on_OptionText_mouse_entered"]
[connection signal="mouse_exited" from="MenuContainer/OptionText" to="." method="_on_OptionText_mouse_exited"]
[connection signal="gui_input" from="MenuContainer/QuitText" to="." method="_on_QuitText_gui_input"]
[connection signal="mouse_entered" from="MenuContainer/QuitText" to="." method="_on_QuitText_mouse_entered"]
[connection signal="mouse_exited" from="MenuContainer/QuitText" to="." method="_on_QuitText_mouse_exited"]
